Update geyser yaml to build code and rearrange main steps

--- a/tasks/grpc_geyser.yaml
+++ b/tasks/grpc_geyser.yaml
@@ -6,6 +6,14 @@
     dest: /home/solana/grpc-geyser
     version: tags/{{ geyser_version }}
 
+- name: build geyser
+  become: true
+  become_user: solana
+  shell: source /home/solana/.cargo/env && cargo build --release
+  args:
+    chdir: /home/solana/grpc-geyser
+    executable: /bin/bash
+
 - name: Save config
   become: true
   become_user: solana
