--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 # defaults file for Solana RPC
 solana_version: "1.18.22"
 ledger_disk: "nvme1n1"
+accounts_disk: "nvme2n1"
 setup_disks: "true"
 download_snapshot: "true"
 swap_mb: "102400"
