--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -77,6 +77,9 @@ http {
 		server_name shyft.to;
     http2 on;
 
+    gzip on;
+    gzip_types text/plain application/xml application/json;
+
 		location / {
 			grpc_buffer_size '16k';
 			grpc_pass grpc://grpc_backend;
