--- a/tasks/snapshot_downloader.yaml
+++ b/tasks/snapshot_downloader.yaml
@@ -6,6 +6,7 @@
       - tqdm
       - requests
     executable: pip3
+    break_system_packages: true
 
 - name: download latest snapshot
   become: true
